--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.14.1",
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
+    "path-to-regexp": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
